--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 html {
   scroll-behavior: smooth;
-  scroll-padding-top: 50px;
+  scroll-padding-top: 80px;
 }
 
 body {
@@ -50,9 +50,15 @@ input {
   color: #212121;
 }
 
+.login-grid {
+  width: 90%;
+  margin: auto;
+  gap: 10px;
+  display: grid;
+}
+
 .login {
   margin: auto;
-  margin-top: 100px;
   width: 600px;
   height: auto;
   border-style: solid;
@@ -64,6 +70,11 @@ input {
 
   transition: 1s;
   color: rgba(44, 43, 43);
+  animation-name: fadeIn;
+  opacity: 0;
+  animation-delay: 1s;
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
 }
 
 .login input {
@@ -179,6 +190,11 @@ input {
   font-size: 0.2rem;
 }
 
+.sign-in a {
+  color: white;
+  text-decoration: none;
+}
+
 .no-list {
   margin-top: 30px;
   font-size: 0.7rem;
@@ -199,6 +215,11 @@ input {
   padding-bottom: 40px;
   border-bottom-style: solid;
   border-width: 1px;
+  opacity: 0;
+  animation-name: fadeIn;
+  animation-delay: 0s;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
 }
 
 .dashboard h1 {
@@ -339,6 +360,26 @@ input {
   width: 30%;
   margin: auto;
   margin-top: 100px;
+}
+
+.watch-header-unloaded {
+  animation-name: fadeIn;
+  animation-delay: 0s;
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
+}
+
+.set404 {
+  margin-top: 300px;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @media screen and (min-width: 2000px) {
